Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 <div class="container" id="app">
     <div class="card" style="padding-bottom: 6px;">
         <div class="header-title">📋 配网终端 · 移动台账</div>
-        <div class="sub-title">六盘水供电 · 自动化终端在线检查</div>
+        <div class="sub-title">钟山供电局 · 智能作业组</div>
     </div>
 
     <!-- 搜索框 + 可视化区 -->
@@ -562,4 +562,5 @@
 })();
 </script>
 </body>
+
 </html>
